tests/error/reference_optional_get_mut_value_ref.bz
// error: couldn't match the function call to the function
// note: function argument types are '?&mut i32'
// note: candidate: 'function __builtin_optional_get_mut_value_ref(value: &mut ?auto) -> <unresolved>'
function test()
{
	let i: ?&mut i32 = null;

	__builtin_optional_get_mut_value_ref(i);
}
